[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "tmtccmd"
description = "TMTC Commander Core"
readme = "README.md"
version = "9.0.0"
requires-python = ">=3.10"
license = {text = "Apache-2.0 or MIT" }
authors = [
    {name = "Robin Mueller", email = "robin.mueller.m@gmail.com"}
]
keywords = ["ccsds", "ecss", "space", "communication", "packet"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "crcmod~=1.7",
    "colorama~=0.4.0",
    "colorlog~=6.6",
    "cobs~=1.2",
    "prompt-toolkit~=3.0",
    "Deprecated~=1.2",
    "pyserial~=3.5",
    "spacepackets~=0.31.0",
    "cfdp-py~=0.6.0",
    "com-interface~=0.2.0"
]

[project.optional-dependencies]
gui = [
    "PyQt6~=6.6",
]
test = [
    "pyfakefs~=5.7",
    "pytest~=8.3"
]

[project.urls]
"Homepage" = "https://github.com/robamu-org/tmtccmd"

[tool.ruff]
exclude = [
    ".git",
    "venv",
    "docs"
]
line-length = 100

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]
[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]
