[metadata]
name = tmtccmd
description = TMTC Commander Core
version = attr: tmtccmd.__version__
long_description = file: docs/README_PyPI.md, NOTICE
long_description_content_type = text/markdown
license = Apache-2.0
author = Robin Mueller
author_email = robin.mueller.m@gmail.com
platform = any

url = https://github.com/robamu-org/tmtccmd
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Natural Language :: English
	Operating System :: POSIX
	Operating System :: Microsoft :: Windows
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Communications
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Scientific/Engineering

[options]
install_requires = 
	crcmod~=1.7
	colorama~=0.4
	colorlog~=6.6
	cobs~=1.2
	prompt-toolkit~=3.0
	deprecation~=2.1
	pyserial~=3.5
	dle-encoder~=0.2.3
	spacepackets==0.14.0rc2
	# spacepackets @ git+https://github.com/us-irs/spacepackets-py.git@6e9c4b44326e6c04c3eaf290b5fd39aa4e37e235#egg=spacepackets
package_dir =
    = .
packages = find:
python_requires = >=3.8

[options.extras_require]
gui =
	PyQt6~=6.4
	# PyQt6-stubs~=5.15
test =
	pyfakefs~=4.5

[flake8]
max-line-length = 100
ignore = D203, W503
per-file-ignores =
	*/__init__.py: F401
exclude =
	.git,
	__pycache__,
	docs/conf.py,
	old,
	build,
	dist,
	venv
max-complexity = 10
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
